cartservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cart-microservice
  labels:
    app: cart-microservice
spec:
  replicas: 3
  selector:
    matchLabels:
      app: cart-microservice
  template:
    metadata:
      labels:
        app: cart-microservice
    spec:
      containers:
      - name: cartservice
        image: meshudn/cartservice:latest
        ports:
        - containerPort: 3032
---
apiVersion: v1
kind: Service
metadata:
  name: cart-service
spec:
  selector:
    app: cart-microservice
  type: LoadBalancer	
  ports:
    - protocol: TCP
      port: 3033
      targetPort: 3032
      nodePort: 30032
