inventory-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-microservice
  labels:
    app: inventory-microservice
spec:
  replicas: 3
  selector:
    matchLabels:
      app: inventory-microservice
  template:
    metadata:
      labels:
        app: inventory-microservice
    spec:
      containers:
      - name: inventory
        image: meshudn/inventoryservice:latest
        ports:
        - containerPort: 3002
---
apiVersion: v1
kind: Service
metadata:
  name: inventory-service2
spec:
  selector:
    app: inventory-microservice
  type: LoadBalancer	
  ports:
    - protocol: TCP
      port: 3004
      targetPort: 3002
      nodePort: 30004
