inventory-updated.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-microservice-2
  labels:
    app: inventory-microservice-2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: inventory-microservice-2
  template:
    metadata:
      labels:
        app: inventory-microservice-2
    spec:
      containers:
      - name: inventory
        image: docker-registry:5000/inventory:v2.5
        ports:
        - containerPort: 3020
      imagePullSecrets:
      - name: reg-cred-secret
---
apiVersion: v1
kind: Service
metadata:
  name: inventory-service3
spec:
  selector:
    app: inventory-microservice
  type: LoadBalancer	
  ports:
    - protocol: TCP
      port: 3021
      targetPort: 3020
      nodePort: 30022
