nginxapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui-deployment
  labels:
    app: ui
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ui
  template:
    metadata:
      labels:
        app: ui
    spec:
      containers:
      - name: nginxapp
        image: vsr-kub005.informatik.tu-chemnitz.de:5000/nginxapp:v1
        imagePullPolicy: Never
        ports:
        - containerPort: 3010
---
apiVersion: v1
kind: Service
metadata:
  name: ui-service
spec:
  selector:
    app: ui
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 3011
      targetPort: 3010
      nodePort: 30010
