order-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-microservice
  labels:
    app: order-microservice
spec:
  replicas: 3
  selector:
    matchLabels:
      app: order-microservice
  template:
    metadata:
      labels:
        app: order-microservice
    spec:
      containers:
      - name: order
        image: meshudn/orderservice:latest
        ports:
        - containerPort: 3009
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
spec:
  selector:
    app: order-microservice
  type: LoadBalancer	
  ports:
    - protocol: TCP
      port: 3011
      targetPort: 3009
      nodePort: 30011
