ingress-frontend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
  annotations:
   nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: vsr-kub005.informatik.tu-chemnitz.de
    http:
      paths:
      - backend:
          service:
            name: frontend-service
            port:
              number: 3002
        path: /frontend
        pathType: Exact
